PWCT Project/First Generation/Applications/Projects/HarbourPWCT_SupernovaProgrammingLanguage/Samples/Errors/MixUnexpectedEndifUnclosedIF.nova
Application title = Error.

I want window and window title = Error.
Window height = 130.


endif
do if [x] = (1).